--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,14 @@ set(CMAKE_CXX_STANDARD 98)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 add_executable(hw2AttachedCodeFiles
-        main.cpp
-        Coordinate.h
-        Interface.h
-        Interface.cpp
-        Robot.h
-        Robot.cpp
-        Map.h
-        Map.cpp
-        RobotDB.h
-        RobotDB.cpp
-        )
+        code/main.cpp
+        code/includes/Coordinate.h
+        code/includes/Interface.h
+        code/Interface.cpp
+        code/includes/RobotTypes/Robot.h
+        code/Robot.cpp
+        code/includes/Map.h
+        code/Map.cpp
+        code/includes/RobotDB.h
+        code/RobotDB.cpp
+        code/includes/RobotTypes/QuickRobot.h code/includes/RobotTypes/QuickLimitedRobot.h code/includes/RobotTypes/StrongRobot.h code/includes/RobotTypes/WeakRobot.h code/includes/RobotTypes/SlowRobot.h)
